--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "peerDependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "styled-components": "^4.1.3"
